assets/src/scss/site.scss
@import "bourbon";

@import "variables";
@import "buttons";
@import "helpers/nolist";
@import "helpers/typescale";

@import "helpers/normalize";
@import "helpers/fonts";

html {
	background: $white;
	color: $black;
	font: #{$basesize} / 1.4 'Workaday', 'Helvetica Neue', Helvetica, sans-serif;
}

section {
	max-width: 780px;
	margin: 100px auto;
	padding: 0 20px;
	text-align: center;
}

h1, h2, h3 {
	border-bottom: .18em solid $black;
	display: inline-block;
}

h1 {
	font-size: typescale(4);
}

h2 {
	font-size: typescale(3)
}

h3 {
	font-size: typescale(2);
}

p {
	margin: 1.4em 0;
}

img {
	max-width: 100%;
	height: auto;
}

#buy {
	a {
		@include btn;
		font-size: typescale(2);
	}

	p {
		color: $grey;
		margin-top: 2em;
	}
}

#bio {
	div {
		margin: 2em 0 0;
		text-align: left;
	}

	p {
		margin-top: 0
	}
}

@media (min-width: 600px) {
	#bio div {
		@include columns(2);
		@include column-gap(90px);
	}
}

#social {
	ul {
		@include nolist;
	}

	li {
		display: inline-block;
		margin: 0 22px;
	}

	.svg {
		fill: $grey;

		&:hover {
			fill: $purple;
		}
	}
}

